modified:   01_Heap_size_check.md  	modified:   02_File_descriptor_check.md  	modified:   03_Memory_lock_check.md  	modified:   04_Maximum_number_of_threads_check.md  	modified:   05_Maximum_size_virtual_memory_check.md  	modified:   06_Maximum_map_count_check.md  	modified:   07_Client_JVM_check.md  	modified:   08_Use_serial_collector_check.md  	modified:   10_OnError_and_OnOutOfMemoryError_checks.md  	modified:   11_Early-access_check.md  	modified:   12_G1GC_check.md